# neural-swarm

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_AUDIT_REPORT.md  CODEBASE_CLEANUP_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE_SYNTHESIS.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTING_STRATEGY.md  LICENSE  MIGRATION_PLAN.md  NEURAL_SWARM_EVOLUTION_ARCHITECTURE.md  NEURAL_SWARM_EVOLUTION_COMPLETE.md  PHASE2_COMPLETION_VALIDATION_REPORT.md  README.md  README_TESTING.md  designing-a-rust-based-swarm.md  intial_thoughts.md  neuroplex_architecture_specification.md  neuroplex_distributed_systems_research.md  pyproject.toml  technology_comparison_matrix.md  validate_implementation.py
.github/workflows/: performance_benchmarks.yml
architecture/: consistency_analysis.md  neuroplex_api_design.md  neuroplex_architecture_summary.md  neuroplex_memory_architecture.md  performance_optimization.md
benches/: core_operations.rs  distributed_memory_performance.rs  edge_computing.rs  fann_comparison.rs  memory_efficiency.rs  neural_benchmarks.rs  neural_performance.rs  python_ffi_performance.rs  regression_detection.rs  security_benchmarks.rs  swarm_coordination.rs
deployment/: README.md
deployment/docker/: Dockerfile  Dockerfile.edge  docker-compose.yml
deployment/hybrid/: Cargo.toml
deployment/hybrid/src/: lib.rs
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
deployment/wasm/: Cargo.toml  build.sh
deployment/wasm/src/: lib.rs
docs/: ARCHITECTURE_SUMMARY.md  BENCHMARKING_GUIDE.md  NEURAL_COMM_ARCHITECTURE.md  NEURAL_COMM_TECHNICAL_SPECS.md  NEURAL_COORDINATION_PROTOCOLS.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_ANALYSIS_REPORT.md  documentation-index.md  getting-started.md  python-api.md  rust-api.md  swarm-integration.md
examples/: basic_network.rs  basic_usage.rs  crdt_examples.rs  image_classification.rs  xor_example.rs
examples/python/: basic_example.py  basic_usage.py  mnist_classification.py
fann-rust-core/: Cargo.toml  README.md
fann-rust-core/src/: error.rs  lib.rs  utils.rs
fann-rust-core/src/network/: layer.rs  mod.rs
neural-comm/: Cargo.toml  README.md
neural-comm/benches/: crypto_benchmarks.rs
neural-comm/examples/: basic_usage.rs  secure_communication.rs
neural-comm/src/: error.rs  lib.rs  memory.rs
neural-comm/src/channels/: mod.rs
neural-comm/src/crypto/: asymmetric.rs  hash.rs  kdf.rs  mod.rs  random.rs  symmetric.rs
neural-comm/src/ffi/: mod.rs
neural-comm/src/protocols/: mod.rs
neural-comm/tests/: integration_tests.rs
neural-swarm-core/: Cargo.toml  design_and_eval.md
neural-swarm-core/src/: error.rs  lib.rs
neural-swarm-core/src/analyzer/: mod.rs
neural-swarm-core/src/decomposer/: mod.rs
neural-swarm-core/src/graph/: mod.rs
neural-swarm-core/src/neural/: mod.rs
neural-swarm-core/src/parser/: mod.rs
neuroplex/: Cargo.toml  README.md
neuroplex/benches/: crdt_benchmark.rs
neuroplex/examples/: basic_usage.rs  distributed_cluster.rs  python_example.py
neuroplex/src/: lib.rs
neuroplex/src/consensus/: log.rs  mod.rs
neuroplex/src/crdt/: g_counter.rs  lww_register.rs  mod.rs  or_set.rs  pn_counter.rs  vector_clock.rs
neuroplex/src/distributed/: mod.rs
neuroplex/src/ffi/: mod.rs
neuroplex/src/sync/: mod.rs
neuroplex/tests/: integration_tests.rs
python/fann_rust_core/: __init__.py
scripts/: benchmark_runner.sh
src/: activation.rs  activations.rs  common_error.rs  error.rs  ffi.rs  inference.rs  integration_test.rs  lib.rs  matrix.rs  memory.rs  network.rs  optimization.rs  profiling.rs  python_bindings.rs  quantization.rs  training.rs  utils.rs
src/agents/: mod.rs
src/api/: mod.rs
src/communication/: mod.rs
src/consensus/: log_replication.rs  mod.rs  raft.rs
src/crdt/: counter.rs  mod.rs  register.rs  sequence.rs  set.rs
src/ffi/: mod.rs
src/integration/: agent_orchestration.rs  apis.rs  fann_core.rs  integration_test.rs  mod.rs  neural_comm.rs  neuroplex.rs  swarm_coordination.rs
src/neural/: mod.rs
src/optimization/: mod.rs  simd.rs
src/security/: mod.rs
src/sync/: gossip.rs  mod.rs
test-infrastructure/: Makefile  automated_test_runner.sh  ci-cd-pipeline.yml  docker-compose.test.yml  k8s-test-cluster.yml  requirements-test.txt
tests/: README.md  cascade_training_test.rs  chaos_engineering_test_suite.rs  comprehensive_consensus_tests.rs  comprehensive_crdt_property_tests.rs  comprehensive_performance_benchmarks.rs  comprehensive_test_runner.rs  coordination_protocol_tests.rs  crdt_correctness_tests.rs  cryptographic_validation_test.rs  deployment_testing_framework.rs  distributed_systems_test_suite.rs  fuzzing_test_harness.rs  integration_testing_suite.rs  integration_tests.rs  interoperability_test.rs  mod.rs  multi_node_integration_tests.rs  neural_architecture_validation_test.rs  neural_coordination_testing.rs  neural_task_decomposition_test.rs  neural_task_decomposition_test_impl.rs  performance_benchmark_suite.rs  performance_benchmarks.rs  performance_reliability_validation.rs  security_test_suite.rs  test_utils.rs  validation_test_runner.rs  xor_test.rs
