[package]
name = "neural-comm"
version = "0.1.0"
edition = "2021"
authors = ["Neural Swarm Team <team@neuralswarm.dev>"]
description = "High-performance cryptographic communication library for neural agent swarms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neural-swarm/neural-comm"
keywords = ["cryptography", "communication", "security", "agents", "swarm"]
categories = ["cryptography", "network-programming", "concurrency"]

[dependencies]
# Core cryptographic dependencies
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
x25519-dalek = "2.0"
hkdf = "0.12"
argon2 = "0.5"
sha3 = "0.10"
blake3 = "1.5"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
quinn = "0.10"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"

# Random number generation
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.19"

# Memory security
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# FFI and Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Performance optimizations
rayon = "1.8"
crossbeam = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
hex = "0.4"

[features]
default = ["std", "async"]
std = []
async = ["tokio"]
python-bindings = ["pyo3"]
benchmark-suite = []

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "channel_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true