[package]
name = "neural-swarm"
version = "0.2.0"
edition = "2021"
description = "Neural swarm coordination system with real-time protocols and consensus"
authors = ["Neural Swarm <neural@swarm.dev>"]
license = "MIT"
repository = "https://github.com/neural-swarm/neural-swarm"
readme = "README.md"

[dependencies]
# Async runtime and futures
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Neural network libraries
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
tch = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Text processing and NLP
tokenizers = "0.15"
regex = "1.10"
lazy_static = "1.4"

# Graph algorithms
petgraph = "0.6"
daggy = "0.8"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
indexmap = "2.0"

# Machine learning
smartcore = "0.3"
linfa = "0.7"
ndarray = "0.15"

# Crypto and hashing
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics and monitoring
metrics = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

# Python FFI
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Neural communication integration
neural-comm = { path = "../neural-comm" }
neuroplex = { path = ".." }
fann-rust-core = { path = "../fann-rust-core" }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"

[lib]
name = "neural_swarm"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-ffi", "neural-backends"]
python-ffi = ["pyo3", "pyo3-asyncio"]
neural-backends = ["candle-core", "candle-nn", "candle-transformers", "tch"]
performance = ["simd"]
simd = []

[[example]]
name = "basic_decomposition"
required-features = ["neural-backends"]

[[example]]
name = "swarm_coordination"
required-features = ["neural-backends"]