[package]
name = "neuroplex"
version = "0.1.0"
edition = "2021"
authors = ["Neural Swarm Team <team@neuralswarm.ai>"]
description = "Distributed memory package with CRDT implementation and Raft consensus"
license = "MIT"
repository = "https://github.com/neural-swarm/neuroplex"
keywords = ["distributed", "memory", "crdt", "consensus", "raft"]
categories = ["data-structures", "concurrency", "distributed-systems"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.7"
lz4 = "1.24"
blake3 = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-asyncio = { version = "0.20", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["python-bindings"]
python-bindings = ["pyo3", "pyo3-asyncio"]
simd = []

[lib]
name = "neuroplex"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "crdt_benchmark"
harness = false

[[bench]]
name = "consensus_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"