[package]
name = "neuroplex-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly deployment target for neural-swarm coordination"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core neural-swarm
neuroplex = { path = "../..", default-features = false }

# WASM runtime
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Async runtime optimized for WASM
tokio = { version = "1.0", features = ["rt", "sync", "time"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Reduced memory footprint
dashmap = { version = "5.5", features = ["raw-api"] }
arc-swap = "1.6"

# Compression for WASM
lz4 = "1.24"

# Crypto optimized for WASM
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging for WASM
wasm-logger = "0.2"
log = "0.4"

# Optional features
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]
edge = ["neuroplex/edge"]
power-aware = ["neuroplex/power-aware"]
minimal = []

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "PerformanceEntry",
  "PerformanceMeasure",
  "PerformanceObserver",
  "PerformanceObserverEntryList",
  "Worker",
  "WorkerGlobalScope",
  "MessageEvent",
  "MessagePort",
  "SharedArrayBuffer",
  "Atomics",
]

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.neuroplex-wasm]
# Aggressive optimization for WASM
opt-level = 3
lto = "fat"